--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.5.17",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-calendars": "^1.1286.0",
+    "react-native-date-picker": "^5.0.2",
     "react-native-gifted-charts": "^1.4.7",
     "react-native-progress": "^5.0.1",
     "react-native-responsive-fontsize": "^0.5.1",
