--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native": "0.73.4",
     "react-native-calendars": "^1.1286.0",
     "react-native-date-picker": "^5.0.2",
+    "react-native-document-picker": "^9.1.2",
     "react-native-dotenv": "^3.4.11",
     "react-native-gifted-charts": "^1.4.7",
     "react-native-progress": "^5.0.1",
