--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-dotenv": "^3.4.11",
     "react-native-gifted-charts": "^1.4.7",
     "react-native-progress": "^5.0.1",
+    "react-native-reanimated": "^3.16.7",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
